crates/pcb-star-core/tests/snapshots/test__missing_pins_should_error.snap
---
source: projects/cli/crates/diode_star_core/tests/test.rs
expression: output
---
Error: test_missing.star:5:1-12:2 Unconnected pin(s): GND, OE, Q2, Q3, Q4, VDD
