crates/pcb-star-core/tests/snapshots/test__nested_components.snap
---
source: projects/cli/crates/diode_star_core/tests/test.rs
expression: output
---
Module {
    name: "<root>",
    source: "Top.star",
    children: [
        FrozenValue(
            Module {
                name: "MyModule",
                source: "/Module.star",
                children: [
                    FrozenValue(
                        Module {
                            name: "MyComponent",
                            source: "/Component.star",
                            children: [
                                FrozenValue(
                                    Component {
                                        name: "Component",
                                        footprint: "SMD:0805",
                                        prefix: "U",
                                        pins: {
                                            "P1": FrozenValue(
                                                "1",
                                            ),
                                            "P2": FrozenValue(
                                                "2",
                                            ),
                                        },
                                        connections: {
                                            "P1": FrozenValue(
                                                Net {
                                                    name: "P1",
                                                    id: "<ID>",
                                                },
                                            ),
                                            "P2": FrozenValue(
                                                Net {
                                                    name: "P2",
                                                    id: "<ID>",
                                                },
                                            ),
                                        },
                                        properties: {
                                            "symbol_path": FrozenValue(
                                                NoneType,
                                            ),
                                        },
                                    },
                                ),
                            ],
                        },
                    ),
                ],
            },
        ),
    ],
}
[]
