crates/pcb-star-core/tests/snapshots/test__net_name_deduplication.snap
---
source: projects/cli/crates/diode_star_core/tests/test.rs
expression: output
---
Module {
    name: "<root>",
    source: "Top.star",
    children: [
        FrozenValue(
            Module {
                name: "MyModule1",
                source: "/MyModule.star",
                children: [
                    FrozenValue(
                        Component {
                            name: "Component",
                            footprint: "SMD:0805",
                            prefix: "U",
                            pins: {
                                "P1": FrozenValue(
                                    "1",
                                ),
                            },
                            connections: {
                                "P1": FrozenValue(
                                    Net {
                                        name: "INTERNAL",
                                        id: "<ID>",
                                    },
                                ),
                            },
                            properties: {
                                "symbol_path": FrozenValue(
                                    NoneType,
                                ),
                            },
                        },
                    ),
                ],
            },
        ),
        FrozenValue(
            Module {
                name: "MyModule2",
                source: "/MyModule.star",
                children: [
                    FrozenValue(
                        Component {
                            name: "Component",
                            footprint: "SMD:0805",
                            prefix: "U",
                            pins: {
                                "P1": FrozenValue(
                                    "1",
                                ),
                            },
                            connections: {
                                "P1": FrozenValue(
                                    Net {
                                        name: "INTERNAL",
                                        id: "<ID>",
                                    },
                                ),
                            },
                            properties: {
                                "symbol_path": FrozenValue(
                                    NoneType,
                                ),
                            },
                        },
                    ),
                ],
            },
        ),
        FrozenValue(
            Module {
                name: "MyModule3",
                source: "/MyModule.star",
                children: [
                    FrozenValue(
                        Component {
                            name: "Component",
                            footprint: "SMD:0805",
                            prefix: "U",
                            pins: {
                                "P1": FrozenValue(
                                    "1",
                                ),
                            },
                            connections: {
                                "P1": FrozenValue(
                                    Net {
                                        name: "INTERNAL",
                                        id: "<ID>",
                                    },
                                ),
                            },
                            properties: {
                                "symbol_path": FrozenValue(
                                    NoneType,
                                ),
                            },
                        },
                    ),
                ],
            },
        ),
    ],
}
[]
