crates/pcb-star-core/tests/snapshots/test__net_passing.snap
---
source: projects/cli/crates/diode_star_core/tests/test.rs
expression: output
---
Module {
    name: "<root>",
    source: "top.star",
    children: [
        FrozenValue(
            Module {
                name: "Test",
                source: "/test.star",
                children: [
                    FrozenValue(
                        Module {
                            name: "MyComponent",
                            source: "/MyComponent.star",
                            children: [
                                FrozenValue(
                                    Component {
                                        name: "capacitor",
                                        type: "capacitor",
                                        footprint: "SMD:0805",
                                        prefix: "U",
                                        pins: {
                                            "P1": FrozenValue(
                                                "1",
                                            ),
                                            "P2": FrozenValue(
                                                "2",
                                            ),
                                        },
                                        connections: {
                                            "P1": FrozenValue(
                                                Net {
                                                    name: "INTERFACE_P1",
                                                    id: "<ID>",
                                                },
                                            ),
                                            "P2": FrozenValue(
                                                Net {
                                                    name: "INTERFACE_P2",
                                                    id: "<ID>",
                                                },
                                            ),
                                        },
                                        properties: {
                                            "symbol_path": FrozenValue(
                                                NoneType,
                                            ),
                                        },
                                    },
                                ),
                            ],
                        },
                    ),
                ],
            },
        ),
    ],
}
[]
