crates/pcb-star-core/tests/snapshots/test__unknown_pin_should_error.snap
---
source: projects/cli/crates/diode_star_core/tests/test.rs
expression: output
---
Error: test_unknown.star:5:1-19:2 Unknown pin name 'INVALID'
