crates/pcb-star-core/tests/snapshots/test__unused_inputs_should_error.snap
---
source: projects/cli/crates/diode_star_core/tests/test.rs
expression: output
---
Error: top.star:4:1-7:2 Unknown argument(s) provided to module my_module: unused
